--- a/sipxpbx/WEB-INF/admin/BulkImport_de.properties
+++ b/sipxpbx/WEB-INF/admin/BulkImport_de.properties
@@ -25,23 +25,23 @@ und die folgenden Felder haben\:</p><ul><li>Benutzername</li>\
 <li>Telefon Seriennummer</li>\
 <li>Telefon Modell</li>\
 <li>Telefon Gruppe</li>\
-<li>Phone description</li>\
+<li>Telefon Beschreibung</li>\
 <li>IM ID</li></ul>\
-<p>Each line from imported file will result in creation of the phone and the user assigned to that phone. \
-If user group or phone group fields are not empty, the newly created user and phone will be added to respective groups. \
-Groups will be created if they do not exist already. <p><p>If the user with the same username is already present, \
-this system will update existing user instead of creating a new one. The same is true for phones\: if the phone with \
-the same serial number already exist it'll be updated.<br/>Only user name and phone serial number are obligatory fields. \
-You can leave the remaining fields empty - in which case this system will not overwrite their values.</p>
-importDescription=To import the phone and user configuration from a CSV file,<br/> \
-enter the name of the CSV file and press the <strong><em>Import</em></strong> button.
+<p>Jede Zeile der importieren Datei wird in der Erstellung des Telefons und des Benutzers, der dem Telefon zugewiesen ist resultieren. \
+Falls das Gruppen- oder Telefonfeld nicht leer ist, wird der neu erstellte Benutzer und das Telefon der zugehörigen Gruppe zugewiesen. \
+Gruppen werden erstellt, wenn Sie nicht bereits existieren. <p><p>Falls ein Benutzer mit dem gleichen Benutzernamen schon existiert, \
+wird das System den Benutzer updaten, anstatt einen neuen zu erstellen. Dasselbe gilt für Telefone\: Falls das Telefon \
+mit der Seriennummer bereits existiert, wird es geupdated.<br/>Nur Benutzernamen und Telefon Seriennummer sind notwendige Felder. \
+Die anderen Felder können Sie leer lassen - in diesem Fall wird das System die Werte nicht überschreiben.</p>
+importDescription=Um die Telfon und Benutzer Konfiguration von einer CSV Datei zu importieren,<br/> \
+geben Sie den Namen der CSV Datei ein und drücken Sie den <strong><em>Import</em></strong> Button.
 title=Import / Export
 job.status=Job Status
-exportDescription=To export the current phone and user configuration to a CSV file press the <strong><em>Export Now</em></strong> button.<br/> \
-The export file will be available for download once the export is completed.<br/> \
-This CSV file can then be used to import the phone and user configuration if required.
-button.exportNow=Export Now
-exportCompleted=Export completed successfully. Please download the CSV file by clicking on the link below.
+exportDescription=Um die aktuelle Telefon und Benutzerkonfiguration in eine CSV Datei zu exportieren, drücken Sie den <strong><em>Exportiere Jetzt</em></strong> Button.<br/> \
+Die exportierte Datei wird zum Download zur Verfügung stehen, sobald der Export abgeschlossen ist.<br/> \
+Diese CSV Datei kann genutzt werden um die Telefon und Benutzer Konfguration zu importieren, falls erforderlich.
+button.exportNow=Exportiere Jetzt
+exportCompleted=Export erfolgreich abgeschlossen. Bitte laden Sie die CSV Datei herunter, indem Sie auf den Link unten klicken.
 tab.import=Import
 tab.export=Export
 
