--- a/sipxpbx/WEB-INF/admin/ExtensionPools_de.properties
+++ b/sipxpbx/WEB-INF/admin/ExtensionPools_de.properties
@@ -4,3 +4,8 @@ label.start=Erste zu vergebende Nebenstellennummer
 label.end=Letzte zu vergebende Nebenstellennummer
 message.lastExtensionTooSmall=Die Zahl f\u00FCr die letzte Nebenstellennummer ist zu klein. Sie muss gleich oder gr\u00F6sser als die Erste \
  zu vergebende Nebenstellennummer sein.
+
+quick.help=<p>Der Nebenstellen Pool wird benutzt um bei der Vergabe von sequentiellen Bereichen von Nebenstellen an neu erstellte Benutzer zu assistieren.</p> \
+<p>HINWEIS: Beide Erweiterungen müssen Nummern zwischen 0 und 2147483647 sein (maximaler Wert von integer). Die letzte Nebenstelle muss größer als die erste sein </p>
+
+
