--- a/sipxpbx/WEB-INF/admin/Intercom_de.properties
+++ b/sipxpbx/WEB-INF/admin/Intercom_de.properties
@@ -1,20 +1,16 @@
+title=Gegensprechanlage ("Intercom")
+quick.help=<p>Eingehende Gegensprechanfragen werden ausschliesslich von Polycom Telefonen entgegengenommen. Jedes SIP Telefon kann jedoch einen Intercomanruf ausl\u00F6sen.</p>\r<em>Wichtig:</em> \u00C4nderungen auf dieser Seite erfordern es, dass der W\u00E4hlplan neu aktiviert wird und dass alle Profile der betroffenen Telefone neu generiert werden.</p><p>Um die Funktion "Gegensprechanlage" zu benutzen w\u00E4hlen Sie die entsprechende Vorwahl und dann die Nebenstellennummer des gew\u00FCnschten Telefons.</p>
+quick.help.aastra=Hinweis: Für Aastra Telefone <strong>muss</strong> die Dauer des Klingel Parameters auf 0 gesetzt werden.
+label.enableIntercom=Aktiviert
+label.groups=Gruppen
+description.groups=Die Funktion "Gegensprechanlage" ist nur verf\u00FCgbar f\u00FCr Polycom Telefone, welche Mitglieder der angegebenen Gruppe sind. Mehrere Gruppen werden durch Leerzeichen getrennt.
+label.prefix=Intercom Prefix
+description.prefix=Die Vorwahl, die gew\u00E4lt werden muss um die Gegensprechanlage-Funktion zu ben\u00FCtzen.
+label.timeout=Klingeldauer
+description.timeout=Definiert wie lange (in Sekunden) das Telefon klingeln soll bevor der Anruf automatisch beantworted wird. Eingabe von "0" bedeutet, dass der Anruf sofort beantwortet wird ohne zuerst zu klingeln.
+label.code="Alert Info" Kode
+description.code=Interner Wert, der vom Telefon benutzt wird um zu erkennen, dass der Anruf automatisch beantworted werden soll.
+msg.success=\u00C4nderungen erfolgreich. Aktivieren Sie jetzt den W\u00E4hlplan neu und senden Sie alle Konfigurationsprofile erneut zu den betroffenen Telefonen um die Funktion einzuschalten.
 
-description.code    = Interner Wert, der vom Telefon benutzt wird um zu erkennen, dass der Anruf automatisch beantworted werden soll.
-description.groups  = Die Funktion "Gegensprechanlage" ist nur verf\u00FCgbar f\u00FCr Polycom Telefone, welche Mitglieder der angegebenen Gruppe sind. Mehrere Gruppen werden durch Leerzeichen getrennt.
-description.prefix  = Die Vorwahl, die gew\u00E4lt werden muss um die Gegensprechanlage-Funktion zu ben\u00FCtzen.
-description.timeout = Definiert wie lange (in Sekunden) das Telefon klingeln soll bevor der Anruf automatisch beantworted wird. Eingabe von "0" bedeutet, dass der Anruf sofort beantwortet wird ohne zuerst zu klingeln.
-
-label.code           = "Alert Info" Kode
-label.enableIntercom = Aktiviert
-label.groups         = Gruppen
-label.prefix         = Vorwahl f\u00FCr Intercom
-label.timeout        = Klingeldauer
-
-link.dialPlans = W\u00E4hlplan
-link.phones    = Telefone
-
-msg.success = \u00C4nderungen erfolgreich. Aktivieren Sie jetzt den W\u00E4hlplan neu und senden Sie alle Konfigurationsprofile erneut zu den betroffenen Telefonen um die Funktion einzuschalten.
-
-quick.help = <p>Eingehende Gegensprechanfragen werden ausschliesslich von Polycom Telefonen entgegengenommen. Jedes SIP Telefon kann jedoch einen Intercomanruf ausl\u00F6sen.</p>\r<em>Wichtig:</em> \u00C4nderungen auf dieser Seite erfordern es, dass der W\u00E4hlplan neu aktiviert wird und dass alle Profile der betroffenen Telefone neu generiert werden.</p><p>Um die Funktion "Gegensprechanlage" zu benutzen w\u00E4hlen Sie die entsprechende Vorwahl und dann die Nebenstellennummer des gew\u00FCnschten Telefons.</p>
-
-title = Gegensprechanlage ("Intercom")
+link.phones=Telefone
+link.dialPlans=Wahlpläne
