--- a/sipxpbx/WEB-INF/admin/JobStatusPage_de.properties
+++ b/sipxpbx/WEB-INF/admin/JobStatusPage_de.properties
@@ -1,21 +1,31 @@
-
-button.clear   = L\u00F6sche Alle
-button.refresh = Neu Laden
-button.remove  = L\u00F6sche ausgef\u00FChrte
-
-error = Fehler
-
-name = Auftrag
-
-start = Startzeit
-
-status = Status
-
-status.COMPLETED   = Abgeschlossen
-status.FAILED      = Fehler
-status.IN_PROGRESS = In Bearbeitung
-status.SCHEDULED   = Geplant
-
-stop = Stopzeit
-
-title = Dienstestatus
+title=Dienstestatus
+button.clear=L\u00F6sche Alle
+button.refresh=Neu Laden
+button.remove=L\u00F6sche ausgef\u00FChrte
+start=Startzeit
+stop=Stopzeit
+status=Status
+failedStatus=Status
+name=Auftrag
+error=Fehler
+failedError=Fehler
+nffqdn=Ort
+fqdn=Ort
+quick.help=Die Dienststatus Seite ist nur zu diagnostischen Zwecken und stellt Informationen über das System Management zur Verfügung \
+und Konfigurationsaktivitäten für geübte Techniker. Ein fehlerhafter Status zeigt normalerweise ein ernstzunehmendes System Problem an \
+welches sofortige Aufmerksamkeit benötigt.<br/>\
+In einem verteilten System kann ein fehlerhafter Status ein Netzwerk- oder Hardwareproblem anzeigen. \
+Um dies zu beheben, versuchen Sie den Server neuzustarten, testen Sie Ihr Netzwerk oder kontaktieren Sie den Support.
+status.COMPLETED=Abgeschlossen
+status.FAILED=Fehler
+status.IN_PROGRESS=In Bearbeitung
+status.SCHEDULED=Geplant
+status.WARNING=Warnung
+phone.line.not.valid=Der Neustart Befehl wird an die erste Line geschickt und die erste Line ist nicht gültig
+phone.sip.exception=Timeout während auf Antwort gewartet wurde
+phone.reset.packet=Reset packet Erstellfehler
+xml.rpc.error.operation=Fehler beim kommunizieren mit dem Host
+label.jobs.success=Erfolgreiche Jobs
+label.jobs.fail=Fehlerhafte Jobs
+tab.failedJobs=Fehlgeschlagene Jobs
+tab.notFailedJobs=Erfolgreiche Jobs
