--- a/sipxpbx/WEB-INF/admin/ListCallGroups_de.properties
+++ b/sipxpbx/WEB-INF/admin/ListCallGroups_de.properties
@@ -1,4 +1,3 @@
-
 add_link = Anrufverteilungsliste hinzuf\u00FCgen
 
 button.delete    = L\u00F6schen
@@ -17,3 +16,6 @@ header.activation = Aktivieren
 name = Name
 
 title = Anrufverteilung
+quick.help=Sie können eine Anrufverteilungsgruppe hinzufügen, damit Anrufe einer einzelnen Nummer an eine Gruppe von mehreren Telefonlines aufgeteilt werden.
+
+
