--- a/sipxpbx/WEB-INF/admin/SnapshotPage_de.properties
+++ b/sipxpbx/WEB-INF/admin/SnapshotPage_de.properties
@@ -1,10 +1,34 @@
+title=Systemstatus speichern
+msg.success=Snapshot Generation erfolgreich gestartet.
+label.credentials=Zugangsinformation ("Credentials")
+label.logs=Logs
+label.logFilter=Log filter
+label.lines=Anzahl der Logzeilen
+label.cdr=Anruf Detailaufzeichnungen
+label.profiles=Geräte Profile
+description.logs=Wenn ausgew\u00E4hlt, werden die Logdateien von Apache und sipX im Systemstatus enthalten sein.
+description.cdr=Wenn aktiviert, werden die Anrufdetail Aufzeichnungen in der Momentaufnahme inkludiert. \
+Anrufaufzeichnungen enthalten sensible private Informationen: \
+Benutzen Sie diese Option nur, wenn Sie ein Problem im Zusamenhang mit CDR Generation analysieren.
+description.profiles=Lassen Sie es deaktiviert um generierte Profile von der Momentaufnahme auszunehmen. \
+Jedes Passwort und andere vertrauenswürdige Informationen dieser Dateien werden in der \
+Momentaufnahme inkludiert. Nur aktiviert, wenn das Analysieren eines Problems die
+kompletten generierten Profile benötigt...\
+description.logFilter=Filtere Logs um die Log Größe zu limitieren.
+description.lines=Die Nummer der Zeilen der Log die in der Momentaufnahme enthalten sein werden.
+message.invalidSelection=Bitte setzen Sie 'Logs' damit der 'Log filter' benutzt werden kann.
+message.invalidNumberOfLines=Sie müssen einen Wert eingeben für 'Anzahl der Log Zeilen' damit Sie 'Log filter' benutzen können.
+quick.help=Momentaufnahmen werden für die Systemdiagnose und Troubleshooting von versierten Technikern genutzt. \
+Momentaufnahmen enthalten alle relevanten Informationen um ein Problem zu analysieren dass mit diesem System auftreten könnte. \
+Abhängig von dem eingestellten Log Level des Systems, werden mehr oder weniger Daten gesammelt und zur Verfügung gestellt \
+in einer Momentaufnahme.<br/>\
+Da Logdateien sehr groß sein können, ist es möglich, eine Anzahl an Zeilen zu spezifizieren, welche in der Momentaufnahme enthalten sein sollen.
+error.xml.rpc=XML-RPC Fehler: {0}.\nEs ist nicht möglich Momentaufnahme des Hosts {1} zu empfangen
+error.xml.rpc.null.snapshot=Kein Output wurde zurückgegeben als der XML-RPC Anruf nach {0} ausgeführt wurde.
+error.snapshot.interrupted=Snapshot Service ist unerwartet terminiert worden.\n{0}
+error.https.server.status.code=Fehler: Http Server auf {0} gibt zurück {1}
+error.https.server=Nicht möglich eine Verbindung zu initiieren nach {0}.\n{1}
+error.io.exception=IO Ausnahme\n{0}
+generated.time=Momentaufnahme generiert auf {0}. Klicken Sie auf den Link unten um sie herunterzuladen.
+messages.running=Läuft ...
 
-description.credentials = L\u00F6schen Sie diese Option um Ihre Passwortdaten geheim zu halten. Alle Passwortdaten werden dann vom Systemstatus entfernt. Nur wenn die Diagnose eines speziellen Problems diese Daten erfordert, sollten sie im Systemstatus enthalten sein.
-description.logs        = Wenn ausgew\u00E4hlt, werden die Logdateien von Apache und sipX im Systemstatus enthalten sein.
-
-label.credentials = Zugangsinformation ("Credentials")
-label.logs        = Logdateien
-
-msg.success = Systemstatus erfolgreich gespeichert. W\u00E4hlen Sie den Link aus um das Statusfile herunterzuladen.
-
-title = Systemstatus speichern
