--- a/sipxpbx/WEB-INF/admin/StatusWarning_de.properties
+++ b/sipxpbx/WEB-INF/admin/StatusWarning_de.properties
@@ -2,3 +2,7 @@
 
 prompt.explain = Einer der Hintergrundauftr\u00E4ge meldete einen Fehler. F\u00FCr Details klicken Sie bitte
 prompt.here    = hier
+prompt.reload=Einer oder mehrere Services müssen neu geladen werden. Für Details klicken Sie bitte:
+prompt.services=Einer oder mehrere Services müssen neu geladen werden. Für Details klicken Sie bitte:
+prompt.softwareUpdates=Ein neues Software Paketupdate wurde gefunden. Für Details klicken Sie bitte:
+title=Status Warnung
