--- a/sipxpbx/WEB-INF/admin/TargetsTable_de.properties
+++ b/sipxpbx/WEB-INF/admin/TargetsTable_de.properties
@@ -8,3 +8,4 @@ target.memoryPercentage=Freier Speicheranteil in Prozent
 target.tcpConnectionsNewly=Neu erstellte TCP-Verbindungen
 target.tcpConnectionsCurrently=Gegenw\u00E4rtig eingerichtete TCP-Verbindungen
 target.diskUsage=Festplattenbelegung in Prozent
+target.swap=Swap Auslastung
