--- a/sipxpbx/WEB-INF/admin/UserRingTable_de.properties
+++ b/sipxpbx/WEB-INF/admin/UserRingTable_de.properties
@@ -1,5 +1,6 @@
-
-alias = Aliase
+alias = Alias
+label.ringFor=Klingele für
+title=Benutzer Klingelton
 
 button.delete = L\u00F6schen
 button.down   = Nach Unten
