--- a/sipxpbx/WEB-INF/admin/WaitingPage_de.properties
+++ b/sipxpbx/WEB-INF/admin/WaitingPage_de.properties
@@ -1,2 +1,3 @@
 restartServer=Der Server wird neu gestartet. Bitte warten...
 waiting.quick.help=Wenn der Neustart beendet ist, werden Sie automatisch zur Login-Seite gef\u00FChrt.
+title=Bitte Warten!!!
