--- a/sipxpbx/WEB-INF/cdr/CdrPage_de.properties
+++ b/sipxpbx/WEB-INF/cdr/CdrPage_de.properties
@@ -1,7 +1,10 @@
 title=Protokollierte Anrufe
 tab.active=Aktive Anrufe
 tab.historic=Historisch
+tab.reports=Reports
 warning.call-resolver-off=Aktive Anrufe k\u00F6nnen nicht angezeigt werden.
 cdr.quick.help=Die Dauer beinhaltet nur die wirkliche Zeit w\u00E4hrend welcher der Anruf verbunden war. Die Datenbank enth\u00E4lt auch die Startzeit, welche \
   die Klingelzeit enth\u00E4lt.
-
+label.activeCalls=Total Aktiv
+error.fillingDesignReport=Fehler beim Befüllen des Designs des Reports mit Daten.
+error.xlsTooManyRows=Es ist nicht möglich den XLS Report zu erstellen: Die Zeilen überschreiten 65535. Bitte verfeinern Sie den Filter und versuchen Sie es erneut
