--- a/sipxpbx/WEB-INF/common/ItemCommon_de.properties
+++ b/sipxpbx/WEB-INF/common/ItemCommon_de.properties
@@ -2,3 +2,5 @@ enabled=Eingeschaltet
 name=Name
 description=Beschreibung
 extension=Nebenstellennummer
+did=DID Nummer
+did.description=Direkte Durchwahl nach Innen. Wird benutzt um von einer externen Line anzurufen.
