--- a/sipxpbx/WEB-INF/conference/BridgesPanel_de.properties
+++ b/sipxpbx/WEB-INF/conference/BridgesPanel_de.properties
@@ -4,3 +4,5 @@ host=Adresse des Servers
 description=Beschreibubg
 add_link=Neue Konferenz "Bridge" hinzuf\u00FCgen
 button.delete=L\u00F6schen
+activeConferences=Konferenzen
+title=Konferenz Server
