--- a/sipxpbx/WEB-INF/conference/EditBridge_de.properties
+++ b/sipxpbx/WEB-INF/conference/EditBridge_de.properties
@@ -5,3 +5,7 @@ label.port=Provisioning Port
 description.port=Portnummer wo der Konferenzserver XML/RPC Managementkommandos entgegennimmt.
 tab.conferences=Konferenzen
 tab.config=Konfiguration
+label.ip=IP Adresse
+label.description=Server Beschreibung
+crumb.conferencing=Konferieren
+error.connect=Konnte nicht auf den Konferenz Server verbinden auf {0}: {1}
