--- a/sipxpbx/WEB-INF/conference/EditConference_de.properties
+++ b/sipxpbx/WEB-INF/conference/EditConference_de.properties
@@ -9,3 +9,9 @@ crumb.conferencing=Konferenz
 crumb.newConference=Neue Konferenz
 label.autorecord=Automatische Aufnahme
 description.autorecord=Nach Aktivierung werden alle Konferenzgespr\u00E4che aufgenommen und im Sprachnachrichten Postfach des Besitzers abgespeichert.
+label.name=Name
+label.extension=Durchwahl
+error.inviteParticipant=Kann keinen Teilnehmer zu einer Konferenz einladen, die keinen Besitzer hat.
+error.moderator.and.participant.pin=Es ist nicht möglich, einen Moderator PIN zu haben, ohne einen Besitzer PIN. 
+error.non.qs.no.mod=Sie können keine non-quickstart Konferenz betreiben, ohne einen Moderator PIN.
+error.moderator.eq.participant=Moderator und Teilnehmer PIN darf nicht derselbe sein.
