--- a/sipxpbx/WEB-INF/conference/ListBridges_de.properties
+++ b/sipxpbx/WEB-INF/conference/ListBridges_de.properties
@@ -1,1 +1,9 @@
 title=Konferenz "Bridges"
+label.userGroups=Benutzer Gruppen
+label.locationsPage=Servers
+
+quick.help=Konferenz Server werden unter System /Servers erstellt und administriert. Ein einzelner Konferenz Server \
+kann eine größere Anzahl an Konferenzen hosten. Für jeden Benutzer ist es möglich, automatisch eine persönliche Konferenz zu erstellen \
+Gehen Sie zu Benutzer Gruppen / Konferenz zuweisen um diese Option einzustellen, bevor Sie die Benutzer erstellen.<br/><br/>\
+Der Konferenz Server kann auf dedizierter Hardware laufen, oder mit anderen Services colocated werden. Pro System \
+können mehrere Konferenz Server erstellt werden.
