--- a/sipxpbx/WEB-INF/dialplan/sbc/EditSbc_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/sbc/EditSbc_de.properties
@@ -1,1 +1,8 @@
 title=SBC
+error.requiredSbc=Sie müssen die Adresse und den Port für die SBC eingeben.
+error.requiredSubnet=Sie müssen ein Subnet oder eine Domain angeben
+help.sbc=Benutzen Sie diese Seite um DNS Domains und IP Subnets zu spezifizieren, welche \
+durch das SBC, hier konfiguriert, geroutet werden.<br/> \
+Dies hier ist unterschiedlich von der default SBC Konfiguration, wo Intranet Domains und Intranet Subnets \
+Ausnahmen aufführe, welche <strong>NICHT</strong> durch irgendein SBC geroutet werden.
+
