--- a/sipxpbx/WEB-INF/dialplan/sbc/InternetCalling_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/sbc/InternetCalling_de.properties
@@ -1,3 +1,5 @@
+description.outboundAddress=Die IP Adresse oder FQDN oder SBC für Internet Anrufe.
+description.outboundPort=Der Port des SBC für Internet Anrufe.
 description.address=IP-Adresse oder DNS-Name des SIP Gateways ("Session Border Controller") f\u00FCr Anrufe \u00FCber das Internet.
 help.sbc=F\u00FCr Anrufe, welche mittels SIP URIs <em>gew\u00E4hlt</em> werden, braucht es Regeln, die bestimmen wie diese \
         Anrufe vom internen Netz zum Internet weitergeleitet werden. Das Spezifizieren eines \
