--- a/sipxpbx/WEB-INF/dialplan/sbc/InternetCalling_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/sbc/InternetCalling_de.properties
@@ -24,3 +24,8 @@ label.subnets=Interne Netzwerkadressen ("Intranet Subnets")
 link.addDomain=Dom\u00E4ne hinzuf\u00FCgen
 link.addSubnet=Subnetz hinzuf\u00FCgen
 title=Anrufe \u00FCber das Internet
+label.outboundAddress=Default SBC Adresse
+label.outboundPort=Default SBC Port
+error.requiredSbc=Sie müssen die Adresse und den Port für das SBC eingeben.
+button.activate=Übernehme
+label.natpage=NAT Traversal
