--- a/sipxpbx/WEB-INF/dialplan/sbc/SbcPanel_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/sbc/SbcPanel_de.properties
@@ -1,5 +1,5 @@
 description.address=IP-Adresse oder DNS-Name des SIP Gateways ("Session Border Controller") f\u00FCr Anrufe \u00FCber das Internet.
-
+description.port=Der Port des SBCs für Internet Anrufe.
 help.sbc=Hier spezifizieren Sie Dom\u00E4nen und Subnetzadressen, welche <strong>durch</strong> den zus\u00E4tzlichen \
         SIP Gateway (SBC) geleitet werden. <br/>\
         Dies ist anders als die Definition f\u00FCr den vorgegebenen SIP Gateway, wo interne Dom\u00E4nen und \
@@ -14,3 +14,5 @@ label.subnet=Subnetz
 label.subnets=Subnetze
 link.addDomain=Dom\u00E4ne hinzuf\u00FCgen
 link.addSubnet=Subnetz hinzuf\u00FCgen
+label.port=SBC Port
+title=Session Border Kontrolle für Internet Anrufe
