--- a/sipxpbx/WEB-INF/dialplan/CallPatternEditor_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/CallPatternEditor_de.properties
@@ -4,3 +4,5 @@ digits.digits=Gesamte gew\u00E4hlte Nummer
 digits.nodigits=Keine
 digits.vdigits=Variabler Teil der gew\u00E4hlten Nummer 
 label.prefix=Vorwahl
+label.andAppend=und anfügen
+title=Anrufvorlagen Editor
