--- a/sipxpbx/WEB-INF/dialplan/DialRulesPanel_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/DialRulesPanel_de.properties
@@ -8,3 +8,5 @@ rule.internalRule=Voicemail
 rule.internationalRule=Auslandsgespr\u00E4ch
 rule.localRule=Ortsgespr\u00E4ch
 rule.longDistanceRule=Ferngespr\u00E4ch
+rule.siteToSiteRule=Site zu Site
+title=Wahlregel
