--- a/sipxpbx/WEB-INF/dialplan/EditAttendantDialRule_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditAttendantDialRule_de.properties
@@ -16,3 +16,6 @@ label.holidayAttendant     = Antwortsystem f\u00FCr Urlaubstage
 label.workingTimeAttendant = Anwortsystem w\u00E4hrend Arbeitszeit
 
 title = W\u00E4hle automatisches Antwortsystem
+description.did=Direkte Einwahlnummer. Wird benutzt um von extern anzurufen.
+error.aliasCollisionException=Alias \"{0}\" ist bereits in Benutzung. Bitte wählen Sie einen anderen Alias für diesen Autoteilnehmer.
+label.did=DID Nummer
