--- a/sipxpbx/WEB-INF/dialplan/EditAutoAttendant_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditAutoAttendant_de.properties
@@ -22,3 +22,6 @@ helpT7 = Es wird eine Abschiedsnachricht gespielt und der Anruf beendet.
 helpT8 = Gehe zu einem anderen (geschachtelten) Antwortsystem.
 helpT9 = Transferiere den Anruf zur angegebenen Nebenstelle.
 title = Automatisches Antwortsystem
+button.resetToDefaults=Auf Standart zurücksetzen
+tab.menu=Menu
+tab.options=Optionen
