--- a/sipxpbx/WEB-INF/dialplan/EditCustomDialRule_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditCustomDialRule_de.properties
@@ -1,1 +1,5 @@
 quick.help=<b>Pr\u00E4fixe</b><br/>Pr\u00E4fixe k\u00F6nnen ganze Zahlen sein (z. B. 2), Zahlenbereiche (z. B. 1-5) oder Aufz\u00E4hlungen (z. B. 2,3,4).
+title=Bearbeite individuelle Regel
+label.dialedNumber=Gewählte Nummer
+label.resultingCall=Sich ergebender Anruf
+label.requiredPermissions=Benötigte Rechte
