--- a/sipxpbx/WEB-INF/dialplan/EditEmergencyDialRule_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditEmergencyDialRule_de.properties
@@ -1,4 +1,3 @@
-
 description.number          = Notfallnummer um Notfalldienste zu erreichen.
 description.pstnPrefix      = Optionale Amtsvorwahl. Diese Vorwahl wird entfernt bevor der Anruf an das Gateway weitergeleitet wird.
 
@@ -8,5 +7,8 @@ label.callerSensitive = Anruferspezifische Weiterleitung
 label.number          = Notfallnummer
 label.pstnPrefix      = Amtsvorwahl
 
-prompt.callerSensitive = Um anruferspezifische Weiterleitung zu konfigurieren clicken Sie
+prompt.callerSensitive = Um anruferspezifische Weiterleitung zu konfigurieren klicken Sie
 prompt.here            = hier
+description.callerSensitive=Wählen Sie diese Option, falls Sie Notfallanrufe anderst routen, abhängig von dem Ort des Anrufers. \
+Benutzen Sie dies nur für Telefone, welche es nicht unterstützen Notfallgateways direkt zu konfigurieren.
+title=Bearbeite Notfallnummern Regel
