--- a/sipxpbx/WEB-INF/dialplan/EditFlexibleDialPlan_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditFlexibleDialPlan_de.properties
@@ -37,3 +37,4 @@ type.Restricted=Limitiert
 type.Toll_free=Gratisanruffe
 type.Attendant=Antwortsystem
 type.Intercom=Gegensprechanlage
+type.Site_To_Site=Seite zu Seite
