--- a/sipxpbx/WEB-INF/dialplan/EditInternalDialRule_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditInternalDialRule_de.properties
@@ -13,3 +13,17 @@ label.details              = Details
 label.extensionLen         = Anzahl Ziffern f\u00FCr interne Nebenstellen
 label.voiceMail            = Nebenstellennummer des Anrufbeantworters
 label.voiceMailPrefix      = Vorwahl f\u00FCr Direkttransfer zum Anrufbeantworter
+
+description.mediaServerHostname=IP Adresse oder Name des Voicemail Servers. Lassen Sie das Feld leer, falls der Voicemail Server auf demselben Computer läuft wie der Anrufserver.
+description.mediaServer=Nur ein Voicemail Typ kann auf einem System konfiguriert werden.
+
+label.mediaServer=Voicemail Typ
+label.mediaServerHostname=Voicemail host
+label.did=DID Nummer
+description.did=Direkte Einwahlnummer. Wird benutzt um von einer externen Leitung anzurufen.
+quick.helpExchange=<b>Microsoft Exchange</b><p>Microsoft Exchange 2007 kann als Alternative zum internen Voicemail Server genutzt werden. Wählen Sie \
+"Exchange Voicemail Server" und geben Sie seinen Namen oder IP Adresse in das vorhergesehene Feld ein.</p><p>Für jeden Benutzer, oder Gruppe von Benutzern \
+muss der gewünschte Server ausgewählt werden. Wählen Sie den "Unified Messaging" Tab im "Benutzermenü" um dies zu tun.<br/></p><p>Wählen Sie \
+entweder Interner Voicemail Server oder Exchange 2007, da diese nicht laufen, wenn beide konfiguriert sind.<br/></p><p>Hinweis: Aufgrund eines Microsoft Problems \
+funktioniert Message Waiting Indication (WMI) nicht mit Exchange 2007.</p><p>Hinweis: Andere externe Voicemail Server können anstatt Exchange 2007 mit dieser Konfiguration benutzt werden.</p>
+title=Interne Wahlregel
