--- a/sipxpbx/WEB-INF/dialplan/ManageAttendants_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/ManageAttendants_de.properties
@@ -3,7 +3,7 @@
 #Modified Calivia GmbH
 #Fri Oct 06 13:31:00 CEST 2006
 
-confirm.delete = Sind Sie sicher, dass Sie die markiereten Antwortsysteme entfernen wollen?
+confirm.delete = Sind Sie sicher, dass Sie die markierten Antwortsysteme entfernen wollen?
 
 description = Beschreibung
 
@@ -17,3 +17,10 @@ name = Name
 section.specialAutoAttendant = Spezielles automatisches Antwortsystem
 
 title = Automatisches Antwortsystem
+error.attendantInUse=Der Teilnehmer kann nicht gelöscht werden. Er wird von den folgenden Wahlregel(n) benutzt: {0}.
+error.operatorDelete=Sie können den Operator Teilnehmer nicht löschen
+tab.manage=Automatisches Antwortsystem
+tab.special=Spezial Modus
+help.attendantSpecial=Benutzen Sie das spezielle automatische Antwortsystem um die Regeln des normalen automatischen Antwortsystems temporär zu überschreiben.<br>Standartmäßig \
+ist das normale automatische Antwortsystem ausgewählt, basierend auf dessen Wahlregeln. Falls das spezielle System aktiviert ist, wird es für alle Anrufe benutzt.
+
