--- a/sipxpbx/WEB-INF/dialplan/PatternsEditor_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/PatternsEditor_de.properties
@@ -5,3 +5,5 @@ label.anyDigits=Beliebige Anzahl Ziffern
 label.prefix=Vorwahl
 link.add=Hinzuf\u00FCgen
 link.delete=L\u00F6schen
+label.and=und
+title=Vorlageneditor
