--- a/sipxpbx/WEB-INF/dialplan/SelectRuleType_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/SelectRuleType_de.properties
@@ -9,3 +9,4 @@ rule.internalRule=Anrufbeantworter
 rule.internationalRule=International
 rule.localRule=Lokal
 rule.longDistanceRule=Ferngespr\u00E4ch
+rule.siteToSiteRule=Seite zu Seite
