--- a/sipxpbx/WEB-INF/dialplan/SpecialAttendantPanel_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/SpecialAttendantPanel_de.properties
@@ -12,3 +12,5 @@ mode.special = Aktivieren Sie das spezielle automatische Antwortsystem
 
 msg.error   = W\u00E4hlen Sie das spezielle automatische Antwortsystem
 msg.success = Der Wechsel zum speziellen automatischen Antwortsystem war erfolgreich.
+title=spezielles automatisches Antwortsystem
+error.requiredAutoAttendant=Sie müssen ein spezielles automatisches Antwortsystem auswählen
