--- a/sipxpbx/WEB-INF/dialplan/WorkingHoursEditor_de.properties
+++ b/sipxpbx/WEB-INF/dialplan/WorkingHoursEditor_de.properties
@@ -8,5 +8,5 @@ label.Sunday=Sonntag
 label.Thursday=Donnerstag
 label.Tuesday=Diestag
 label.Wednesday=Mittwoch
-label.from=vom
-label.to=bis
+label.from=Von
+label.to=Bis
