--- a/sipxpbx/WEB-INF/gateway/EditGateway_de.properties
+++ b/sipxpbx/WEB-INF/gateway/EditGateway_de.properties
@@ -3,6 +3,30 @@ title=Gateway Konfiguration
 tab.config=Konfiguration
 tab.dialplan=W\u00E4hlplan
 tab.gcai=Anruferidentifikation
+tab.ports=PSTN Lines
 
 label.prefix=Vorwahl
 description.prefix=Vorwahl, die zu allen Nummern hinzugef\u00FChgt wird, die durch diesen Gateway vermittelt werden.
+msg.err.trunkingNotEnabled=SIP trunking role muss eingeschaltet werden um die integrierte SIP Trunk SBC zu nutzen
+
+help.gatewayConfig=Um ein neues Gateway einzurichten, füllen Sie die Parameter auf dieser Seite aus und richten Sie dann PSTN Lines ein. \
+Sie brauchen keine anderen Einstellungen zu beachten, da alle Gateway Einstellungen automatisch für einen typischen Einsatz konfiguriert sind. \
+Schauen Sie im Herstellerhandbuch des Gateways nach, oder fragen Sie einen Experten um Rat, wenn andere Parameter eingestellt werden müssen.
+
+quick.help.gatewayCallerAlias=<br/>\
+Die ausgehende Anrufer-ID wird aus den Benutzer Anrufer-ID Einstellungen und den den Gateway \
+Arufer-ID Einstellungen gebildet.\
+<br/>\
+Die aus SIP trunks resultierende Anruf-ID hängt von den ITSP Regeln ab.\
+<br/>\
+Analoge Gateways sind normalerweise nicht in der Lage, die Anrufer-ID weiterzugeben und werden Ihre zugehörige PSTN \
+line Nummer stattdessen anzeigen.\
+<br/>\
+Das Verhalten von digitalen (T1/E1) Gateways und SIP Telefonenist Herstellerabhängig. \
+Die effektive Anrufer-ID kann auch von Ihrem Carrier abhängen.\
+<br/>\
+Erweiterte Einstellungen erlauben den Display-Namen, den Domain-Namen und die URL Parameter der Anrufer-ID zu überschreibene.\
+Diese Optionen sind nur nützlich, wenn das Gateway Anrufe an ein anderes SIP-System umleitet.
+
+error.duplicateNameException=Ein Gateway mit dem Namen \"{0}\" existiert bereits.
+error.duplicateSerialNumberException=Ein Gateway mit der Seriennummer \"{0}\" existiert bereits.
