--- a/sipxpbx/WEB-INF/gateway/GatewayCallerAliasInfoPanel_de.properties
+++ b/sipxpbx/WEB-INF/gateway/GatewayCallerAliasInfoPanel_de.properties
@@ -17,3 +17,8 @@ label.keepDigits=Zu behaltende Ziffern
 description.keepDigits=Anzahl Ziffern, die f\u00FCr die Anruferidentifikation behalten werden sollen bevor die Vorwahl \
  hinzugef\u00FChgt wird. Wenn die Nebenstellennummer des Benutzers mehr Ziffern hat als hier angegeben, so werden die \
  \u00FCberzahligen Ziffern weggelassen.
+
+label.enableCallerId=Specify Caller ID
+description.enableCallerId=If checked the value of Caller ID below will overwrite any values specified \
+for user and for gateway. Use this only if you need to specify the Display Name \
+and optional URL parameters.
