--- a/sipxpbx/WEB-INF/gateway/GatewayForm_de.properties
+++ b/sipxpbx/WEB-INF/gateway/GatewayForm_de.properties
@@ -3,6 +3,7 @@ label.name=Name
 label.description=Beschreibung
 label.address=Adresse
 label.outboundAddress=Outbound Address
+label.outboundPort=Outbound Port
 description.address=F\u00FCr einen PSTN Gateway: IP Adresse (Beispiel: 10.1.1.1) oder der voll qualifizierter Name des \
   Gateways (Beispiel: gateway.example.com). Der Gateway kann an jedem Subnetz sein ohne NAT. \
   F\u00FCr einen SIP Diensteanbieter: Externe IP Adresse oder voll qualifizierter Name des Diensteanbieters \
