--- a/sipxpbx/WEB-INF/gateway/GatewayForm_de.properties
+++ b/sipxpbx/WEB-INF/gateway/GatewayForm_de.properties
@@ -4,11 +4,17 @@ label.description=Beschreibung
 label.address=Adresse
 label.outboundAddress=Outbound Address
 label.outboundPort=Outbound Port
+label.template=Use provider template
+description.template=You can pre-fill gateway settings if your SIP trunking provider (ITSP) is on the list. To enter your own \
+settings, or if your provider is not on the list, select "None".
 description.address=F\u00FCr einen PSTN Gateway: IP Adresse (Beispiel: 10.1.1.1) oder der voll qualifizierter Name des \
   Gateways (Beispiel: gateway.example.com). Der Gateway kann an jedem Subnetz sein ohne NAT. \
   F\u00FCr einen SIP Diensteanbieter: Externe IP Adresse oder voll qualifizierter Name des Diensteanbieters \
   (Zum Beispiel: sip.anbieter.de). Beachten Sie: Ein SIP Firewall muss auf der Seite "SIP Firewall" definiert \
   werden um den Anbieter zu erreichen.
+description.outboundAddress=For an external SBC: IP address of the SBC (example: 10.1.1.1) or the fully qualified hostname \
+of the SBC (example: gateway.example.com).
+description.outboundPort=The port of the external SBC.
 label.addressPort=Port
 label.invalidformat=Portnummer zwischen 0 und 65534
 description.addressPort=Benutzte Portnummer. W\u00E4hlen Sie den Wert 0 um den Standardport zu verwenden (Beispiel: 5070).
@@ -22,3 +28,21 @@ default.port=0
 label.model=Modell
 label.serial=Seriennummer
 description.serial=Normalerweise entspricht die Seriennummer der MAC Adresse des Gateways (Beispiel: 0040214131fa).
+label.route=Built-in SipTrunk SBC
+description.route=Session Border Controller route that processes calls directed at this SIP trunk \
+gateway. If this is a Direct SIP trunk (no ITSP) then this field should be left unselected.
+label.firmwareVersion=Firmware Version
+none=None
+label.site=Location
+description.site=Restrict the gateway by selecting a specific location for which it can be used. A location is represented by a group of users and \
+you need to create a branch for every location that needs to be distinguished. This setting allows routing of calls based on \
+in which location or by which user the call originates (source routing). This is useful if users located in a branch office would like to \
+have a gateway preference so that calls are routed through their local gateway, i.e. to preserve WAN bandwidth or to use Caller ID offered by \
+an analog gateway based on the PSTN number assigned to it. Only if that gateway is not \
+available call routing will fall back to other gateways specified for the corresponding dialing rule.
+label.shared=Shared
+description.shared=If checked this gateway can be used by any user in any location, even if a specific location is selected. This setting is \
+checked by default so that users in an identified location still use their preferred gateway, but the gateway can also be used by other \
+users in other locations.
+label.allSites=-- all --
+label.useSipXBridge=Use built-in SIP Trunk SBC
