--- a/sipxpbx/WEB-INF/gateway/GatewayTable_de.properties
+++ b/sipxpbx/WEB-INF/gateway/GatewayTable_de.properties
@@ -1,3 +1,5 @@
 # 'name' and 'description' translations are in application bundle (sipXconfig-web.properties) 
 address=Adresse
 model=Model
+site=Ort
+all=Alle
