--- a/sipxpbx/WEB-INF/gateway/ListGateways_de.properties
+++ b/sipxpbx/WEB-INF/gateway/ListGateways_de.properties
@@ -12,4 +12,7 @@ help.gatewayConfig=Konfigurieren Sie "unmanaged gateways", "SIP trunks" und Gate
   Gateway kann diese Dateien herunterladen wenn er eingeschaltet wird. Alternativ kann die Konfigurationsdatei manuell \
   zum Gateway \u00FCbertragen werden. Ein "unmanaged gateway" ist notwendig f\u00FCr alle manuell konfigurierten \
   Gateways, so dass sie im W\u00E4hlplan zur Verf\u00FCgung stehen.
+msg.success.restart={0} gateway(s) werden neu gestartet. Gehen Sie auf die Job Status Seite um den Fortschritt zu verfolgen.
+user.regeneration.failed=Wiederherstellen des Benutzers fehlgeschlagen. In-memory DB (MongoDB) ist in einem inkonsistenten Zustand. \
+Bitte "Sende Profile" an Ihren Master-Server um eine vollständige Replikation der Mongo DB zu veranlassen. 
 
