--- a/sipxpbx/WEB-INF/permission/EditPermission_de.properties
+++ b/sipxpbx/WEB-INF/permission/EditPermission_de.properties
@@ -4,3 +4,4 @@ description.label=Der Name der Berechtigung wird auf der Seite der Benutzerberec
 label.description=Beschreibung
 label.defaultValue=Vorgegebener Wert
 description.defaultValue=Wenn selektiert, dann ist diese Berechtigung vorgegeben
+message.duplicatePermission= Berechtigung {0} wurde bereits definiert. Bitte wählen Sie einen anderen Namen.
