--- a/sipxpbx/WEB-INF/phone/AddPhoneUser_de.properties
+++ b/sipxpbx/WEB-INF/phone/AddPhoneUser_de.properties
@@ -5,3 +5,4 @@ help.text=<p>Geben Sie die Suchkriterien ein und dr\u00FCcken Sie <b>Suchen</b> 
           <p>W\u00E4hlen Sie Benutzer aus der angezeigten Liste und selektieren Sie <b>Hinzuf\u00FCgen</b>/ \
           Hinzugef\u00FCgte Benutzer werden in der Lage sein auf diesem Telefon Anrufe zu empfangen.</p>\
           <p>Anklicken von <b>Suchen</b> ohne Suchkriterien zeigt alle Benutzer an.</p>
+error.maxLinesException=Die maimale Anzahl an erlaubten Leitungen ist {0}
