--- a/sipxpbx/WEB-INF/phone/EditPhoneForm_de.properties
+++ b/sipxpbx/WEB-INF/phone/EditPhoneForm_de.properties
@@ -3,3 +3,5 @@ description.serialNumber=Die Seriennummer ist eine eindeutige Identifikation f\u
 label.groups=Gruppen
 description.groups=Z\u00E4hle alle Gruppen f\u00FCr dieses Telefon auf. Wenn es eine Gruppe noch nicht gibt, so wird sie erstellt. Mehrere Gruppen werden durch Leerzeichen getrennt.
 label.firmwareVersion=Firmwareversion
+error.duplicateSerialNumberException = Ein Telefon mit der Seriennummer: {0} existiert bereits.
+error.invalidSerialNumberException = Die Seriennummer \"{0}\" erfüllt nicht die Anforderungen {1}.
