--- a/sipxpbx/WEB-INF/phone/GroupActions_de.properties
+++ b/sipxpbx/WEB-INF/phone/GroupActions_de.properties
@@ -1,1 +1,2 @@
 label.moreActions=Weitere Funktionen...
+branch.validity.error=Mindestens einer der gewählten Benutzer ({0}) ist in einer anderen Abteilung ({1}) als die ausgewählte Gruppen Abteilung ({2}).
