--- a/sipxpbx/WEB-INF/phone/NewPhone_de.properties
+++ b/sipxpbx/WEB-INF/phone/NewPhone_de.properties
@@ -1,2 +1,7 @@
 title=Neues Telefon hinzuf\u00FCgen
 prompt.another=Ein weiteres Telefon hinzuf\u00FCgen?
+help.newPhone=Um ein neues Telefon, oder FXS Gateway zu konfigurieren, füllen Sie die Parameter dieser Seite aus, dann fügen Sie Benutzer einer Leitung hinzu. \
+Keine anderen Einstellungen brauchen beachtet werden, da alle Telefon Parameter automatisch für einen typischen Gebrauch vorkonfiguriert sind. Konsultieren Sie das Telefon \
+Hersteller Handbuch oder fragen Sie einen Experten um Rat falls andere Parameter eingestellt werden müssen.
+error.duplicateSerialNumberException = Ein Telefon mit der Seriennummer: {0} existiert bereits.
+error.invalidSerialNumberException = Die Seriennummer \"{0}\" erfüllt nicht die geforderten Voraussetzungen {1}.
