--- a/sipxpbx/WEB-INF/phone/PhoneGroups_de.properties
+++ b/sipxpbx/WEB-INF/phone/PhoneGroups_de.properties
@@ -2,3 +2,4 @@ title=Telefongruppen
 add=Gruppe hinzuf\u00FCgen
 orderMsg=Die Reihenfolge von Gruppen in der Liste ist wichtig, wenn verschiedene Gruppen verschiedene Werte f\u00FCr bestimmte Parameter haben. Der Wert in der letzten Gruppe bestimmt.
 groupMsg=Gruppen erlauben das Organisieren von Telefonen in logischen Bl\u00F6cken. Parameter werden dabei auf die Mitglieder der Gruppe vererbt. Telefone k\u00F6nnen in mehreren Gruppen gleichzeitig sein.
+msg.error.emptySelection=Bitte wählen Sie mindestens eine Gruppe aus
