--- a/sipxpbx/WEB-INF/phone/PhoneLines_de.properties
+++ b/sipxpbx/WEB-INF/phone/PhoneLines_de.properties
@@ -1,3 +1,4 @@
+title=Telefonleitungen
 intro=Mehrere Leitungen, welche verschiedene Benutzer representieren, k\u00F6nnen dem Telefon zugeordnet werden. Die \
  maximale Anzahl Leitungen wird durch das Telefon bestimmt und ist f\u00FCr das entsprechende Modell unten angegeben. \
  Selektieren Sie "Leitung hinzuf\u00FCgen" um einen neuen Benutzer dem Telefon zuzuweisen. Selektieren Sie "Externe Leitung \
@@ -13,3 +14,4 @@ link.AddExternal=Externe Leitung hinzuf\u00FCgen
 link.AddLine=Leitung hinzuf\u00FCgen
 lines=Leitungen
 line=Leitung
+error.maxLinesException=Maximale Anzahl an Leitungen ist {0}
