--- a/sipxpbx/WEB-INF/phone/PhoneTableActions_de.properties
+++ b/sipxpbx/WEB-INF/phone/PhoneTableActions_de.properties
@@ -1,4 +1,3 @@
-
 button.restart         = Telefon-Neustart
 button.sendAllProfiles = Alle Konfigurationen senden
 button.sendProfiles    = Konfiguration senden
@@ -9,3 +8,5 @@ msg.success.addToPhoneGroupAction      = {0} Telefon(e) zur Gruppe {1} hinzugef\
 msg.success.delete                     = {0} Telefon(e) erfolgreich gel\u00F6scht.
 msg.success.removeFromPhoneGroupAction = {0} Telefon(e) aus Gruppe {1} entfernt.
 msg.success.restart                    = {0} Telefon(e) werden neu gestartet. Gehen Sie zur Dienstestatusseite f\u00FCr weitere Informationen.
+confirm.sendAllProfiles=Sind Sie sicher, dass Sie eine neue Konfiguration an alle Telefone schicken wollen?
+title=Telefonliste
