--- a/sipxpbx/WEB-INF/phonebook/EditPhonebook_de.properties
+++ b/sipxpbx/WEB-INF/phonebook/EditPhonebook_de.properties
@@ -1,3 +1,4 @@
+title=Telefonbuch
 title.phonebook=Telefonbuch
 description.phonebook=Erstellen eines Telefonbuches aufgrund den dem System bekannten Benutzer. Das erstellte Telefonbuch wird den Telefonen zur \
  Verf\u00FCgung gestellt, welche Benutzern zugeordnet sind, die in der im folgenden definierten Konsumentengruppe aufgef\u00FCrt sind. Die \
