--- a/sipxpbx/WEB-INF/phonebook/EditPhonebook_de.properties
+++ b/sipxpbx/WEB-INF/phonebook/EditPhonebook_de.properties
@@ -16,4 +16,22 @@ description.phonebookFile=Zus\u00E4tzlich zu den dem System bekannten Namen k\u0
  Die externe Datei sollte eine Titelzeile haben, welche w\u00E4hrend dem Import ignoriert wird, gefolgt von einer oder mehreren Zeilen mit dem \
  folgenden Format: <br/>\
  <code>Vorname, Nachname, Nummer oder URI</code>
+msg.invalidPhonebookFormat=Die hochgeladene Datei enthält keine gültigen Kontakte.
+label.phonebookGoogleAddress=Google Account
+label.phonebookGooglePassword=Google Passwort
+description.phonebookGoogleAddress=Geben Sie Ihren Google Account und das Passwort ein um zusätzliche Kontakte des Google Adressbuches zu importieren.
+msg.phonebookGoogleAuthError=Nicht korrekte Google Zugangsdaten
+msg.phonebookGoogleError=Interne Google Server Probleme
+msg.phonebookGoogleTransportError=Kann nicht zu Google Server verbinden
+import.contacts=Import
+msg.importSucces=Kontakte wurden erfolgreich importiert
+msg.emptyImportFile=Sie müssen eine csv Datei oder vCard Datei auswählen
+import.gmail=Import
+import.file=Import
+msg.vcardImport.success={0} Kontakt(e) wurde(n) erfolgreich in das Telefonbuch importiert
+msg.emptyGoogleAccount=Sie müssen eine E-Mail Adresse angeben
+msg.emptyGooglePassword=Sie müssen ein Passwort eingeben
+msg.phonebookVcardUploadError=Ein Fehler ist aufgetreten während die vCard Kontakte importiert wurden.
+label.Download=Download
+error.duplicatePhonebookName=Ein Telefonbuch mit diesem Namen existiert bereits.
  
